Fixed smth in the Metrics.java